IC-Prod/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>BCS_Account_Contract_Number__c</fullName>
        <description>Contract Number from BCS&apos;s customer.</description>
        <inlineHelpText>Contract Number from BCS&apos;s customer.</inlineHelpText>
        <label>BCS Account Contract Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCS_Account_Number__c</fullName>
        <label>BCS Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCS_Customer_Number__c</fullName>
        <label>BCS Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCS_Univar_Status__c</fullName>
        <description>BCS or Univar Contract Status</description>
        <inlineHelpText>BCS  or Univar Contract Status</inlineHelpText>
        <label>BCS/Univar Status</label>
        <picklist>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDA Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <label>Contract Price</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Termination_Lead_Time__c</fullName>
        <label>Contract Termination Lead Time</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Version__c</fullName>
        <label>Contract Version</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_and_Version__c</fullName>
        <description>Contract plus the Version #.</description>
        <label>Contract and Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contract Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( TEXT(MONTH( StartDate ))) = 0, &quot;Contract Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(  TEXT(ContractTerm)) = 0, &quot;Contract Term, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( BillingCity ) = 0, &quot;Complete Contract Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( CustomerSignedId ) = 0, &quot;Customer Signature, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), &quot;Owner Expiration Notice&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(TEXT(MONTH(StartDate)))=0, 0,20) + IF( LEN(TEXT( ContractTerm ))=0, 0,20) + IF( LEN( BillingCity ) = 0, 0,20) + IF( LEN( CustomerSignedId) = 0, 0,20) + IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evergreen_Provision__c</fullName>
        <label>Evergreen Provision</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FOB_Point__c</fullName>
        <label>FOB Point</label>
        <picklist>
            <picklistValues>
                <fullName>Destination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship Point</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Index_Location__c</fullName>
        <label>Index Location</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Liquid Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia NE &amp; Asia SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia NE Asia Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ave Acquisition FOB Gulf-DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ave Acquisition FOB Gulf-MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ave Acquistion California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ave Acquistion Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayonne-DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayonne-MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Contract - DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe Export MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf-DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville-DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville-MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East-DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East-MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philadelphia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philadelphia-DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philadelphia-MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tampa-Sulfur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - California-DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Contract DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Contract-DIA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Index_Publication__c</fullName>
        <label>Index Publication</label>
        <picklist>
            <picklistValues>
                <fullName>CMAI=Chemical Market Association Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPI = Consumer Price Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDP Deflator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harriman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPI = Producer Price Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wage Rates of Workers</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Quantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms Code</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STMT 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STMT 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STMT 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STMT 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STMT 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15TH Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Change_Mechanism__c</fullName>
        <label>Price Change Mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Consignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost-Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Netback</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Notification_Lead_Time__c</fullName>
        <label>Price Notification Lead Time</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Protection__c</fullName>
        <label>Price Protection</label>
        <picklist>
            <picklistValues>
                <fullName>1ST DAY OF MONTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANNUAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALENDAR QUARTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTRACT PERIOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTRACT QUARTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTHLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEMI ANNUAL</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_UOM__c</fullName>
        <label>Price UOM</label>
        <picklist>
            <picklistValues>
                <fullName>CWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TON</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Name from the Product object.</description>
        <inlineHelpText>Product Family</inlineHelpText>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <description>DCS or SAP Product Number</description>
        <label>Product Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_UOM__c</fullName>
        <label>Quantity UOM</label>
        <picklist>
            <picklistValues>
                <fullName>CWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TON</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account_Number__c</fullName>
        <formula>Account.CustomerShipTo__c</formula>
        <label>Ship-To Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Method_Code__c</fullName>
        <label>Shipment Method Code</label>
        <picklist>
            <picklistValues>
                <fullName>CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PREPAID</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tank_Ownership__c</fullName>
        <label>Tank Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Univar</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnivarContractName__c</fullName>
        <formula>Account.Name  + &quot;-&quot; +   Product_Name__r.Name</formula>
        <label>Univar Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Univar_Contract_Number__c</fullName>
        <externalId>true</externalId>
        <label>Univar Contract #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Univar_Contract_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Ship_To_Account_Number__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Price_UOM__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Expired_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Univar_Contract_Number__c</columns>
        <columns>Contract_Version__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Ship_To_Account_Number__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Price_UOM__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Expired Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Non_Expired_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Univar_Contract_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Ship_To_Account_Number__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Price_UOM__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>BCS_Univar_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:60</value>
        </filters>
        <label>All Contracts Expiring in &lt; 60 DAYS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contracts_created_last_60_days</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>Contracts created last 60 days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Univar_Contract_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Ship_To_Account_Number__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Price_UOM__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Contract_Termination_Lead_Time__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Contracts1</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Univar_Contract_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Ship_To_Account_Number__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Price_UOM__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Contract_Termination_Lead_Time__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>My Team&apos;s Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Expired_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Univar_Contract_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Ship_To_Account_Number__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>BCS_Univar_Status__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Price_UOM__c</columns>
        <columns>Contract_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Non-Expired Contracts</label>
        <language>en_US</language>
    </listViews>
</CustomObject>